# rust_ex

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  debug_setup.rs  error.rs  lib.rs  main.rs  state.rs
src/handlers/: analytics.rs  auth.rs  expenses.rs  mod.rs
src/middleware/: auth.rs
src/models/: dto.rs  expense.rs  mod.rs  user.rs
src/routes/: mod.rs
src/services/: analytics_service.rs  auth_service.rs  expense_service.rs  mod.rs
tests/: analytics_tests.rs  auth_tests.rs  expenses_tests.rs
tests/common/: mod.rs
tests/fixtures/: monefy.csv
